k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: item-charts-backend
  namespace: item-charts
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: item-charts-backend
  type: ClusterIP
