k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: item-charts-frontend
  namespace: item-charts
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: item-charts-frontend
