k8s/postgresql.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: item-charts-database
  namespace: item-charts
spec:
  replicas: 1
  selector:
    matchLabels:
      app: item-charts-database
  template:
    metadata:
      labels:
        app: item-charts-database
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-storage
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: pvc-postgresql

---

apiVersion: v1
kind: Service
metadata:
  name: item-charts-database
  namespace: item-charts
spec:
  ports:
    - port: 5432
  selector:
    app: item-charts-database
